deploy/openshift/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-site
  labels:
    app: code-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-site
  template:
    metadata:
      labels:
        app: code-site
    spec:
      containers:
      - name: site
        image: quay.io/bkribbs15/code-site:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
