deploy/openshift/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "code-site-service"
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
  selector:
    app: code-site
