deploy/openshift/application/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: code-site-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: code-site-service
